--- a/index.html
+++ b/index.html
@@ -51,6 +51,9 @@
         <div class="content">
             <div class="blog-title">
 
+                <h1>Personal Blog</h1>
+                <p>Welcome to my Personal Blog! Feel free to share our thoughts...</p>
+
             </div>
             <div class="main-content">
                 <div class="sidebar">
