--- a/article.html
+++ b/article.html
@@ -103,10 +103,17 @@
                 Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus saepe debitis, corrupti dolore
                 nobis voluptates quae illum ullam tenetur maiores optio deleniti accusamus, excepturi ratione ducimus
                 reprehenderit. Perferendis, accusamus enim?
+                
             </p>
 
         </article>
 
+
+        <footer>
+            <p> &copy; 2020 | Created by <a href="https://www.linkedin.com/in/spyrosvigkos/" target="_blank">Spyros
+                Vigkos</a>
+    
+        </footer>
     </div>
 
 </body>
