--- a/index.html
+++ b/index.html
@@ -147,6 +147,8 @@
 
             </div>
             <footer>
+                <p> &copy; 2020 | Created by <a href="https://www.linkedin.com/in/spyrosvigkos/" target="_blank">Spyros
+                    Vigkos</a>
 
             </footer>
         </div>
