Add Author Card in Blog Post

--- a/article.html
+++ b/article.html
@@ -62,6 +62,30 @@
             <p>This is the best Article ever...</p>
         </div>
 
+        <div class="author-container">
+            <div class="author-photo-and-name-container" id="author-header">
+                <img src="img/profileSpiros_400X.jpg" class="author-photo" alt="profile image">
+                <div class="name-and-title">
+                    <h4 class="author-name">Spyros Vigkos</h4>
+                    <p class="author-title">Front-End Developer Student @Udacity</p>
+                    
+                </div>
+                <div class="follow-btn f-btn-non-mobile">
+                    <button><i class="fab fa-twitter"></i></button>
+                  </div>
+            </div>
+            <div class="author-bio">
+                <p>As a guy with a constant thirst for tech skills, I am accepting
+                compelling challenges about modern or sophisticated technologies to experiment. As a professional call me an
+                Entry-level Front-End Developer or Web WordPress Developer. The combination of my passion for software & application development and my entrepreneurial
+                mindset, create a smooth experience for the final user. I’m looking forward to embedding in my daily routine
+                this passion in a professional workspace and take it to the next level of software development.</p>
+                <div class="follow-btn f-btn-mobile">
+                    <button><i class="fab fa-twitter"></i> follow</button>
+                  </div>
+            </div>
+        </div>
+
         <div class="sidebar" id="categories">
             <h2>Categories</h2>
             <ul>
